--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <h2>Informações do grupo</h2>
             <hr>
             <label for="nome-1">Nome</label>
-            <input id="nome-1" type="text">
+            <input id="nome-1" type="text" required autofocus>
 
             <label for="nome-2">Nome</label>
-            <input id="nome-2" type="text">
+            <input id="nome-2" type="text" required>
 
             <label for="nome-3">Nome</label>
-            <input id="nome-3" type="text">
+            <input id="nome-3" type="text" required>
 
             <label for="nome-4">Nome</label>
-            <input id="nome-4" type="text">
+            <input id="nome-4" type="text" required>
 
             <label for="nome-5">Nome</label>
-            <input id="nome-5" type="text">
+            <input id="nome-5" type="text" required>
 
             <label for="historia">História do grupo</label>
             <textarea name="" id="historia"></textarea>
