Adicionando nomes de integrantes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>POSTECH - FULLSTACK</h1>
+        <h1>POSTECH - Fullstack</h1>
         <p>Desafio aula inaugural</p>
     </header>
     <main>
@@ -24,22 +24,22 @@
             <h2>Informações do grupo</h2>
             <hr>
             <label for="nome-1">Nome</label>
-            <input id="nome-1" type="text" required autofocus>
+            <input id="nome-1" name="nome-1" type="text" required autofocus>
 
             <label for="nome-2">Nome</label>
-            <input id="nome-2" type="text" required>
+            <input id="nome-2" name="nome-2" type="text" required>
 
             <label for="nome-3">Nome</label>
-            <input id="nome-3" type="text" required>
+            <input id="nome-3" name="nome-3" type="text" required>
 
             <label for="nome-4">Nome</label>
-            <input id="nome-4" type="text" required>
+            <input id="nome-4" name="nome-4" type="text" required>
 
             <label for="nome-5">Nome</label>
-            <input id="nome-5" type="text" required>
+            <input id="nome-5" name="nome-5" type="text" required>
 
             <label for="historia">História do grupo</label>
-            <textarea name="" id="historia"></textarea>
+            <textarea name="historia" id="historia"></textarea>
             <div>
                 <button>Enviar</button>
             </div>
